--- a/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
@@ -12,7 +12,7 @@
 
 
         <div class="row">
-            <div class="col-md-12" style="margin-top:-15px">
+            <div class="col-md-12" style="margin-top:-14px">
                 <div class="card card-navy">
 
                     <div class="card-header text-sm ">
@@ -52,33 +52,37 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12" style="margin-top:-15px">
+            <div class="col-md-12" style="margin-top:-10px">
                 <div class="card" style="background-color: #E0FFFF;">
+                    <div class="px-4 py-2" style="margin-bottom:-8px">
+           
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <h7 class="text-bold ">Name:  </h7><span class="text-black font-italic" id="ddlName"></span><br />
+                                        <h7 class="text-bold">Address:  </h7><span class="text-black font-italic" id="ddlAddress"></span><br />
+                                        <h7 class="text-bold">Number:  </h7><span class="text-black font-italic" id="ddlNumber"></span><br />
+                                        <h7 class="text-bold">Territory:  </h7><span class="text-black font-italic" id="ddlTerritory"></span><br />
+                                        <h7 class="text-bold">Territory Manager:  </h7><span class="text-black" id="ddlManager"></span>
 
-                    <div class="card-header text-sm ">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <h7 class="text-bold">Name:  </h7><span class="text-black" id="ddlName"></span><br />
-                                    <h7 class="text-bold">Address:  </h7><span class="text-black" id="ddlAddress"></span><br />
-                                    <h7 class="text-bold">Number:  </h7><span class="text-black" id="ddlNumber"></span><br />
-                                    <h7 class="text-bold">Territory:  </h7><span class="text-black" id="ddlTerritory"></span><br />
-                                    <h7 class="text-bold">Territory Manager:  </h7><span class="text-black" id="ddlManager"></span>
-
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <h7 class="text-bold">Total Bill:  </h7><span class="text-black" id="ddltotalbill"></span><br />
-                                    <h7 class="text-bold">Total Paid:  </h7><span class="text-black" id="ddltotalpaid"></span><br />
-                                    <h7 class="text-bold">Total Return: </h7><span class="text-black" id="ddltotalreturn"></span><br />
-                                    <h7 class="text-bold">Total Due: </h7> <span class="text-black" id="ddltotaldue"></span>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <h7 class="text-bold">Total Bill:  </h7><span class="text-black font-italic" id="ddltotalbill"></span><br />
+                                        <h7 class="text-bold">Total Paid:  </h7><span class="text-black font-italic" id="ddltotalpaid"></span><br />
+                                        <h7 class="text-bold">Total Return: </h7><span class="text-black font-italic" id="ddltotalreturn"></span><br />
+                                        <h7 class="text-bold">Total Due: </h7> <span class="text-black font-italic" id="ddltotaldue"></span>
 
+                                    </div>
                                 </div>
-                            </div>
 
-                        </div>
+                            </div>
+     
+
                     </div>
+
+
 
                 </div>
             </div>
